# CsvChatBot

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
Backend/: dummy.py  logic.py  main.py
Data/: birthplace-2018-census-csv.csv
Frontend/: app.py
